--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display:flex;
+  justify-content: space-between;
+  align-items:center;
+  padding: 8px;
 }
 
 .logo {
@@ -14,6 +18,10 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display:flex;
+  padding:5px;
+  margin:5px;
+  gap:8px;
 }
 
 a {
@@ -23,3 +31,11 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+/*
+.right-links{
+  margin-left:auto;
+}
+.left-links{
+  margin-right:auto;
+}
+*/
