--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -24,3 +24,17 @@ img {
   justify-content: center;
   background: #eee;
 }
+.container{
+  display:flex;
+  justify-content: center;
+  gap:52px;
+}
+.info{
+  max-width:200px;
+  text-align:center
+}
+.title{
+  display:flex;
+  justify-content: center;
+  margin-bottom:32px;
+}
